Test/civl/regression-tests/anonymous-action-fail.bpl.expect
anonymous-action-fail.bpl(9,1): error: expected _ for name of anoonymous action
1 parse errors detected in anonymous-action-fail.bpl
